@@ -12,7 +12,10 @@
     <description>Mule Core Unit Tests</description>
 
     <properties>
-        <surefire.args>${surefire.test.unit.open.args}</surefire.args>
+        <surefire.args>
+            --add-exports=org.mule.runtime.artifact.ast/org.mule.runtime.ast.internal.error=org.mule.test.core
+            ${surefire.test.unit.open.args}
+        </surefire.args>
 		
         <javaModuleName>org.mule.test.core</javaModuleName>
         <skipExportTests>false</skipExportTests>
